--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10"
-  },
   "name": "haffmansreptile",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Hoffman's Reptile Shop website",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
