--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.17.2",
     "nodemailer": "^7.0.5"
   },
