--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.17.2",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
